fixes spacing on confirmation page

--- a/public/css/confirmation.css
+++ b/public/css/confirmation.css
@@ -51,7 +51,6 @@
     margin-top: 10%;
     font-size: 50px;
     padding-top: 10%;
-    margin-bottom: 100%;
 }
 
 .success {
@@ -67,6 +66,10 @@
 .success h3 {
 	font-family: 'Fira Sans';
 	font-size: 22px;
+}
+
+#refer_success {
+    margin-bottom: 100%;
 }
 
 .refer-a-friend form {
